// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Navbar IOS should renders correctly 1`] = `
<NavigationBar
  containerStyle={Object {}}
  leftButton={
    <TouchableOpacity
      activeOpacity={0.2}
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[MockFunction]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingLeft": 12,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="white"
        name="ios-arrow-back"
        size={30}
      />
    </TouchableOpacity>
  }
  rightButton={null}
  statusBar={
    Object {
      "style": "light-content",
    }
  }
  style={Object {}}
  tintColor="#355974"
  title={
    Object {
      "tintColor": "white",
      "title": "My title",
    }
  }
/>
`;

exports[`Components Navbar IOS should renders correctly 2`] = `
<NavigationBar
  containerStyle={Object {}}
  leftButton={null}
  rightButton={null}
  statusBar={
    Object {
      "style": "light-content",
    }
  }
  style={Object {}}
  tintColor="#355974"
  title={
    Object {
      "tintColor": "white",
      "title": "My title",
    }
  }
/>
`;

exports[`Components Navbar IOS should renders correctly 3`] = `
<NavigationBar
  containerStyle={Object {}}
  leftButton={null}
  rightButton={null}
  statusBar={
    Object {
      "style": "light-content",
    }
  }
  style={Object {}}
  tintColor="#355974"
  title={<View />}
/>
`;
